# telegrax

./: .gitignore  Cargo.toml  config.test.example.json  readme.md
.cargo/: config.toml
examples/: send_message.rs
src/: bot.rs  error.rs  lib.rs  limit.rs  result.rs
tests/: bot.rs  kit.rs
tests/integration/: bot.rs  kit.rs  main.rs
