[package]
name = "telegrax"
version = "0.1.0"
edition = "2021"
description = "Telegram Bot APIs"

[dependencies]
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
libc = "0.2.149"
serde_path_to_error = "0.1.16"
regex = "1.10.6"
