[package]
name = "telegrax"
version = "0.4.0"
edition = "2021"
description = "Telegram Bot APIs"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/kevin-leptons/telegrax"

[dependencies]
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
luci = "0.1.0"
